--- a/index.css
+++ b/index.css
@@ -18,14 +18,8 @@ body {
   color: transparent;
 }
 
-.quip {
-  border: 1px solid white;
-  border-radius: 8px;
-  position: absolute;
-  top: 100px;
-  padding: 11px;
+.rainbow-border{
   background: black;
-  max-width: 300px;
   box-shadow: 0px 0px 2px 1px rgba(148,0,211,1),
 0px 0px 2px 2px rgba(75,0,130,1),
 0px 0px 2px 3px rgba(0,0,255,1),
@@ -35,10 +29,33 @@ body {
 0px 0px 2px 7px rgba(255,0,0,1);
 }
 
+.quip {
+  border: 1px solid white;
+  border-radius: 8px;
+  position: absolute;
+  top: 100px;
+  padding: 11px;
+  max-width: 300px;
+
+}
+
+.sales-pitch{
+  bottom: 200px;
+  color: white;
+  width: 100%;
+  padding: 11px;
+  height: 150px;
+  position: absolute;
+  bottom: 11px;
+
+
+}
+
 #closer {
   display: block;
   margin-left: auto;
   margin-right: auto;
   position: relative;
-  width: 50%;
+  height: 640px;
+  width: 640px;
 }
