--- a/index.css
+++ b/index.css
@@ -39,6 +39,31 @@ body {
 
 }
 
+.fruit-container{
+  min-width: 45%;
+  display:flex;
+  height: 50px;
+  padding: 5px;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.fruit-container:hover{
+  background: linear-gradient(90deg, rgba(255,0,0,1) 0%, rgba(255,154,0,1) 10%, rgba(208,222,33,1) 20%, rgba(79,220,74,1) 30%, rgba(63,218,216,1) 40%, rgba(47,201,226,1) 50%, rgba(28,127,238,1) 60%, rgba(95,21,242,1) 70%, rgba(186,12,248,1) 80%, rgba(251,7,217,1) 90%, rgba(255,0,0,1) 100%);
+}
+
+.fruit-name{
+  width: 200px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+}
+
+.fruit-img{
+  width: 50px;
+  height: 50px;
+}
+
 .sales-pitch{
   bottom: 200px;
   color: white;
@@ -47,6 +72,9 @@ body {
   height: 150px;
   position: absolute;
   bottom: 11px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 
 
 }
