--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
 body {
   background-color: black;
   color: white;
-  margin:0px;
+  margin: 0px;
   margin: 0px;
   overflow: auto;
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -19,15 +19,15 @@ body {
   color: transparent;
 }
 
-.rainbow-border{
+.rainbow-border {
   background: black;
-  box-shadow: 0px 0px 2px 1px rgba(148,0,211,1),
-0px 0px 2px 2px rgba(75,0,130,1),
-0px 0px 2px 3px rgba(0,0,255,1),
-0px 0px 2px 4px rgba(0,255,0,1),
-0px 0px 2px 5px rgba(255,255,0,1),
-0px 0px 2px 6px rgba(255,127,0,1),
-0px 0px 2px 7px rgba(255,0,0,1);
+  box-shadow: 0px 0px 2px 1px rgba(148, 0, 211, 1),
+    0px 0px 2px 2px rgba(75, 0, 130, 1),
+    0px 0px 2px 3px rgba(0, 0, 255, 1),
+    0px 0px 2px 4px rgba(0, 255, 0, 1),
+    0px 0px 2px 5px rgba(255, 255, 0, 1),
+    0px 0px 2px 6px rgba(255, 127, 0, 1),
+    0px 0px 2px 7px rgba(255, 0, 0, 1);
 }
 
 .quip {
@@ -42,9 +42,9 @@ body {
 
 }
 
-.fruit-container{
+.fruit-container {
   min-width: 45%;
-  display:flex;
+  display: flex;
   height: 50px;
   padding: 5px;
   flex-direction: row;
@@ -52,23 +52,28 @@ body {
   cursor: pointer;
 }
 
-.fruit-container:hover{
-  background: linear-gradient(90deg, rgba(255,0,0,1) 0%, rgba(255,154,0,1) 10%, rgba(208,222,33,1) 20%, rgba(79,220,74,1) 30%, rgba(63,218,216,1) 40%, rgba(47,201,226,1) 50%, rgba(28,127,238,1) 60%, rgba(95,21,242,1) 70%, rgba(186,12,248,1) 80%, rgba(251,7,217,1) 90%, rgba(255,0,0,1) 100%);
+.fruit-container:hover {
+  background: linear-gradient(90deg, rgba(255, 0, 0, 1) 0%, rgba(255, 154, 0, 1) 10%, rgba(208, 222, 33, 1) 20%, rgba(79, 220, 74, 1) 30%, rgba(63, 218, 216, 1) 40%, rgba(47, 201, 226, 1) 50%, rgba(28, 127, 238, 1) 60%, rgba(95, 21, 242, 1) 70%, rgba(186, 12, 248, 1) 80%, rgba(251, 7, 217, 1) 90%, rgba(255, 0, 0, 1) 100%);
 }
 
-.fruit-name{
+.avatar{
+  position: relative;
+  z-index: 2;
+}
+
+.fruit-name {
   width: 200px;
   height: 50px;
   display: flex;
   align-items: center;
 }
 
-.fruit-img{
+.fruit-img {
   width: 50px;
   height: 50px;
 }
 
-.sales-pitch{
+.sales-pitch {
   bottom: 200px;
   color: white;
   width: 100%;
@@ -96,25 +101,37 @@ body {
 
 }
 
-.animated_bg{
-  animation: animated-bg-animation  0.4s steps(3) infinite;
+.animated_bg {
+  animation: animated-bg-animation 0.4s steps(3) infinite;
   width: 50px;
   height: 50px;
 }
 
 @keyframes animated-bg-animation {
-  100% { background-position: -150px; }
+  100% {
+    background-position: -150px;
+  }
 }
 
 
-#bounce-container{
+#bounce-container {
   width: 100vw;
   height: 100vh;
   position: fixed;
   top: 0px;
   left: 0px;
-  z-index: 1;
 }
+
+#button-container {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  z-index:1000;
+  pointer-events:none;
+}
+
 
 
 :root {
@@ -129,39 +146,46 @@ body {
   --y-speed-zip: 1s;
 }
 
-.el-wrap{
+.el-wrap {
   position: absolute;
 }
 
-.el { 
+.el {
   width: var(--width);
   height: var(--width);
+  z-index: 1;
+
 }
 
 .x {
   animation: x var(--x-speed) linear infinite alternate;
 }
+
 .y {
   animation: y var(--y-speed) linear infinite alternate;
 }
+
 .x-fast {
   animation: x var(--x-speed-fast) linear infinite alternate;
 }
-.y-fast{
+
+.y-fast {
   animation: y var(--y-speed-fast) linear infinite alternate;
 }
 
 .x-zip {
   animation: x var(--x-speed-zip) linear infinite alternate;
 }
-.y-zip{
+
+.y-zip {
   animation: y var(--y-speed-zip) linear infinite alternate;
 }
 
 .x-turtle {
   animation: x var(--x-speed-turtle) linear infinite alternate;
 }
-.y-turtle{
+
+.y-turtle {
   animation: y var(--y-speed-turtle) linear infinite alternate;
 }
 
@@ -170,9 +194,86 @@ body {
     transform: translateX(calc(100vw - var(--width)));
   }
 }
+
 @keyframes y {
   100% {
     transform: translateY(calc(100vh - var(--width)));
   }
 }
 
+.chat-container {
+  position: fixed;
+  right: 15%;
+  top: 15px;
+  margin-top: 65px;
+  height: 515px;
+  width: 1000px;
+  color: white;
+  text-decoration: none;
+  border-radius: 2px;
+  box-shadow: 2px 2px 2px 3px rgba(0, 0, 0, .4);
+}
+
+.chat-header {
+  height: 50px;
+  color: white;
+  background-color: #b72a21;
+  font-size: 14px;
+  padding: 20px;
+}
+
+.chat-header p {
+  margin-left: 15px;
+}
+
+button {
+  background: #b72a21;
+  color: white;
+  display: inline-block;
+  border: 1px solid #c4c4c4;
+  padding: 10px;
+  border-radius: 8px;
+}
+
+.chat-body {
+  color: #b72a21;
+  background-color: #f8fafa;
+  width: 100%;
+  height: 425px;
+}
+
+.chat-body p {
+  margin-left: 15px;
+}
+
+.chat-line {
+  padding: 5px;
+}
+
+.chat-icon {
+  clip-path: circle(50% at 50% 50%);
+  -webkit-clip-path: circle(43% at 50% 50%);
+  display: inline-block;
+  background-color: #b72a21;
+  color: white;
+  padding: 15px;
+  font-size: 16px;
+  line-height: 10px;
+  vertical-align: top;
+}
+
+.chat-text {
+  background: white;
+  font-size: 14px;
+  display: inline-block;
+  width: 800px;
+  margin-left: 10px;
+  border: 1px solid #c4c4c4;
+  padding: 10px;
+  border-radius: 8px;
+}
+
+.customer-service-hell {
+  overflow: auto;
+  height: 465px;
+}
