--- a/index.css
+++ b/index.css
@@ -13,6 +13,20 @@ body {
 
 }
 
+.rainbowTextAnimated {
+  background-image: 
+    linear-gradient(to right, red,orange,yellow,green,blue,indigo,violet); 
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;  
+  animation: move 360s linear infinite;
+}
+
+@keyframes move {
+  to {
+    background-position: -4500vh;
+  }
+}
+
 .rainbow-text {
   -webkit-background-clip: text;
   background-image: linear-gradient(270deg, violet, indigo, blue, green, #ff0, orange, red);
