--- a/index.css
+++ b/index.css
@@ -226,12 +226,12 @@ body {
 }
 
 .chat-container {
-  position: fixed;
-  right: 15%;
-  top: 15px;
+
   margin-top: 65px;
   height: 515px;
-  width: 1000px;
+  width: 85vw;
+  margin-left: auto;
+  margin-right: auto;
   color: white;
   text-decoration: none;
   border-radius: 2px;
@@ -272,6 +272,8 @@ button {
 
 .chat-line {
   padding: 5px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .chat-icon {
@@ -284,17 +286,18 @@ button {
   font-size: 16px;
   line-height: 10px;
   vertical-align: top;
+  max-height: 15px;
 }
 
 .chat-text {
   background: white;
   font-size: 14px;
   display: inline-block;
-  width: 800px;
   margin-left: 10px;
   border: 1px solid #c4c4c4;
   padding: 10px;
   border-radius: 8px;
+  flex-grow: 1
 }
 
 .customer-service-hell {
